[package]
name = "eql"
version = "0.1.0"
authors = ["Teodor Maxim <57960185+tmaxmax@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"
unic-ucd-category = "0.9.0"
bstr = "0.2.14"
